# BMI323-Sensor-API

./: CMakeLists.txt  bmi3.c  bmi323.c
examples/accel/: accel.c  accel.h
examples/common/: common.c  common.h
examples/gyro/: gyro.c  gyro.h
examples/self_calibration/: self_calibration.c  self_calibration.h
examples/self_test/: self_test.c  self_test.h
examples/tap/: tap.c  tap.h
examples/temperature/: temperature.c  temperature.h
