idf_component_register(SRCS "bmi3_defs.h" "bmi323_defs.h" "bmi3.c" "bmi3.h" "bmi323.c" "bmi323.h" "examples/accel/accel.h" "examples/accel/accel.c" "examples/gyro/gyro.h" "examples/gyro/gyro.c" "examples/self_calibration/self_calibration.h" "examples/self_calibration/self_calibration.c" "examples/self_test/self_test.h" "examples/self_test/self_test.c" "examples/tap/tap.h" "examples/tap/tap.c"
                    INCLUDE_DIRS . PRIV_REQUIRES main)
 
